[package]
name = "flutter-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.19", features = ["derive"] }
regex = "1.9.3"
serde = { version = "1.0.183", features = ["derive"] }
serde_yaml = "0.9.25"
tokio = { version = "1.29.1", features = ["full"] }
